# TypingSpeedTest_CPP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  lessonmanager.cpp  lessonmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  simple_typing_test.cpp  soundmanager.cpp  soundmanager.h  statisticsmanager.cpp  statisticsmanager.h  typingtest.cpp  typingtest.h
.claude/: settings.local.json
src/: main.cpp
src/core/: typingtest.h
src/managers/: thememanager.cpp  thememanager.h
src/ui/: mainwindow.cpp  mainwindow.h
